--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,13 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "phpunit/phpunit": "^5.7",
+        "symfony/console": "^3.2"
+    }
+    "autoload": {
+        "psr-4": {
+            "Marius2805\\AgilityMeter\\": ""
+        }
+    }
 }
