--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,20 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "phpunit/phpunit": "^5.7",
-        "symfony/console": "^3.2"
-    }
+        "symfony/console": "^3.2",
+        "cpliakas/git-wrapper": "^1.7",
+        "nesbot/carbon": "^1.21",
+        "symfony/process": "^3.2"
+    },
+    "require-dev": {
+      "phpunit/phpunit": "^5.7",
+      "symfony/filesystem": "^3.2",
+      "ext-zip": "^1.13"
+    },
     "autoload": {
         "psr-4": {
-            "Marius2805\\AgilityMeter\\": ""
+            "Marius2805\\AgilityMeter\\Tests\\": "tests",
+            "Marius2805\\AgilityMeter\\Src\\": "src"
         }
     }
 }
