--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/console": "^3.2",
         "cpliakas/git-wrapper": "^1.7",
         "nesbot/carbon": "^1.21",
-        "symfony/process": "^3.2"
+        "symfony/process": "^3.2",
+        "beberlei/assert": "^2.6"
     },
     "require-dev": {
       "phpunit/phpunit": "^5.7",
