--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "cpliakas/git-wrapper": "^1.7",
         "nesbot/carbon": "^1.21",
         "symfony/process": "^3.2",
-        "beberlei/assert": "^2.6"
+        "beberlei/assert": "^2.6",
+        "symfony/finder": "^3.2"
     },
     "require-dev": {
       "phpunit/phpunit": "^5.7",
